--- a/website/copy/cryptoverif-users.html
+++ b/website/copy/cryptoverif-users.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html lang="en">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <TITLE>CryptoVerif users</TITLE>
 </HEAD>
@@ -23,7 +23,7 @@ Crypto-Verifying Protocol Implementations in ML.
 In <A HREF="http://www-verimag.imag.fr/~lakhnech/FCC/">Workshop on Formal and Computational Cryptography - FCC 2007</A>.
 -->
 <LI>
-Karthikeyan Bhargavan, Ricardo Corin, Cédric Fournet, and Eugen Zalinescu.
+Karthikeyan Bhargavan, Ricardo Corin, CÃ©dric Fournet, and Eugen Zalinescu.
 Cryptographically Verified Implementations for TLS.
 In Proceedings of the 15th ACM Conference on Computer and Communications Security (CCS'08), pages 459-468, October 2008. Available at <A HREF="http://prosecco.gforge.inria.fr/personal/karthik/pubs/cryptographically-verified-implementations-for-tls-ccs08.pdf">http://prosecco.gforge.inria.fr/personal/karthik/pubs/cryptographically-verified-implementations-for-tls-ccs08.pdf</A>.
 
@@ -43,16 +43,16 @@ Bo Meng and Wei Chen. Computer Assisted Proof of Resistance of Denial of Service
 -->
 
 <LI>
-Joe-Kai Tsay and Stig F. Mjølsnes. A Vulnerability in the UMTS and LTE Authentication and Key Agreement Protocols. In Computer Network Security (MMM-ACNS'12), Lecture Notes in Computer Science, volume 7531, 2012, pp 65-76.
+Joe-Kai Tsay and Stig F. MjÃ¸lsnes. A Vulnerability in the UMTS and LTE Authentication and Key Agreement Protocols. In Computer Network Security (MMM-ACNS'12), Lecture Notes in Computer Science, volume 7531, 2012, pp 65-76.
 Available at <A HREF="http://link.springer.com/chapter/10.1007/978-3-642-33704-8_6">http://link.springer.com/chapter/10.1007/978-3-642-33704-8_6</A>.
 
 <LI>
-Mihhail Aizatulin, Andrew Gordon, and Jan Jürjens. Computational Verification of C Protocol Implementations by Symbolic Execution. In CCS 2012.
+Mihhail Aizatulin, Andrew Gordon, and Jan JÃ¼rjens. Computational Verification of C Protocol Implementations by Symbolic Execution. In CCS 2012.
 Available at <A HREF="https://www.microsoft.com/en-us/research/publication/computational-verification-of-c-protocol-implementations-by-symbolic-execution/">https://www.microsoft.com/en-us/research/publication/computational-verification-of-c-protocol-implementations-by-symbolic-execution/</A>.
 
 <LI>
-   Karine Altisen, Stéphane Devismes, Raphaël Jamet, and Pascal Lafourcade. 
-   Routage sécurisé et résilient pour réseaux de capteurs sans fil. In:  15èmes Rencontres Francophones sur les Aspects Algorithmiques des Télécommunications (AlgoTel), May 2013, Pornic, France. pp.1-4, 2013. Available at <A HREF="https://hal.archives-ouvertes.fr/hal-00813387/">https://hal.archives-ouvertes.fr/hal-00813387/</A>.
+   Karine Altisen, StÃ©phane Devismes, RaphaÃ«l Jamet, and Pascal Lafourcade. 
+   Routage sÃ©curisÃ© et rÃ©silient pour rÃ©seaux de capteurs sans fil. In:  15Ã¨mes Rencontres Francophones sur les Aspects Algorithmiques des TÃ©lÃ©communications (AlgoTel), May 2013, Pornic, France. pp.1-4, 2013. Available at <A HREF="https://hal.archives-ouvertes.fr/hal-00813387/">https://hal.archives-ouvertes.fr/hal-00813387/</A>.
    
 <LI>
   Bo Meng, Leyuan Niu, Yitong Yang, and Zimao Li. Mechanized Verification of Security Properties of Transport Layer Security 1.2 Protocol with CryptoVerif in Computational Model. In: Information Technology Journal 13(4):601-613, 2014. Available at <A HREF="http://docsdrive.com/pdfs/ansinet/itj/2014/601-613.pdf">http://docsdrive.com/pdfs/ansinet/itj/2014/601-613.pdf</A>.
@@ -67,7 +67,7 @@ Available at <A HREF="https://www.microsoft.com/en-us/research/publication/compu
   (ICICS 2016), LNCS, volume 9977, pp. 431-441, 2016. Available at
   <A HREF="https://link.springer.com/chapter/10.1007/978-3-319-50011-9_33">https://link.springer.com/chapter/10.1007/978-3-319-50011-9_33</A>.
 
-<LI> Karine Altisen, Stéphane Devismes, Raphaël Jamet, and Pascal Lafourcade.
+<LI> Karine Altisen, StÃ©phane Devismes, RaphaÃ«l Jamet, and Pascal Lafourcade.
   SR3: secure resilient reputation-based routing. In: Wireless Networks,
   October 2017, Volume 23, Issue 7, pp. 2111 2133. Available at <A HREF="https://link.springer.com/article/10.1007/s11276-016-1273-4">https://link.springer.com/article/10.1007/s11276-016-1273-4</A>.
   
