--- a/website/copy/kerberos/CeCILL.html
+++ b/website/copy/kerberos/CeCILL.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>CeCILL FREE SOFTWARE LICENSE AGREEMENT</title>  
 
 <style type="text/css">
@@ -58,7 +58,7 @@ CeCILL<sup><a href="#footnote1">1</a></sup>
 license are:</p> 
 
 <p>Commissariat
-à l'Energie Atomique - CEA, a public
+Ã  l'Energie Atomique - CEA, a public
 scientific, technical and industrial research establishment, having its
 principal place of business at 25 rue Leblanc, immeuble Le Ponant D, 75015
 Paris, France.</p>
@@ -673,7 +673,7 @@ thereof to its provisions.</p>
 	Licensee undertakes not to directly or indirectly infringe
 	the intellectual property rights of the Holder and/or Contributors
         on the Software
-	and to take, where applicable, vis-à-vis its staff, any and
+	and to take, where applicable, vis-Ã -vis its staff, any and
 	all measures required to ensure respect of
         said intellectual 
 	property rights of the Holder and/or Contributors.</p>
