--- a/website/copy/kerberos/index.html
+++ b/website/copy/kerberos/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html lang="en">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Computationally Sound Mechanized Proofs for Basic and Public-key Kerberos</title>
 </head>
 <body>
