updated OEKE web page

--- a/website/copy/OEKE/index.html
+++ b/website/copy/OEKE/index.html
@@ -11,12 +11,14 @@
 <P>
 <A HREF="http://cryptoverif.inria.fr">The CryptoVerif tool</A>
 <P>
-The following files correspond to an older version of
+The following files may correspond to an older version of
 CryptoVerif; up-to-date files are included in the CryptoVerif
 distribution: files <tt>examples/obasic/OEKE.ocv</tt> and
 <tt>examples/basic/signedDH.pcv</tt>.
 
-<H2>OEKE</H2>
+<H2>For CryptoVerif version 1.14 (CSF'12 and ePrint 2012/173v1)</H2>
+
+<H3>OEKE</H3>
 
 <A HREF="OEKE.ocv">The CryptoVerif model of OEKE</A>
 <P>
@@ -26,13 +28,34 @@ The library of cryptographic primitives: <A HREF="default.ocvl">Full library</A>
 <pre>./cryptoverif OEKE.ocv</pre>
 (assuming the CryptoVerif model has been saved under the name <tt>OEKE.ocv</tt> in the CryptoVerif directory).
 
-<H2>Signed Diffie-Hellman protocol</H2>
+<H3>Signed Diffie-Hellman protocol</H3>
 
 <A HREF="signedDH.ocv">The CryptoVerif model of the signed Diffie-Hellman protocol</A>. 
 <P>
 <A HREF="signedDH.out">The CryptoVerif output</A>, obtained by the command
 <pre>./cryptoverif signedDH.ocv</pre>
 (assuming the CryptoVerif model has been saved under the name <tt>signedDH.ocv</tt> in the CryptoVerif directory).
+
+<H2>For CryptoVerif version 2.06 (ePrint 2012/173v2)</H2>
+
+<H3>OEKE</H3>
+
+<A HREF="2.06/OEKE.ocv">The CryptoVerif model of OEKE</A>
+<P>
+The library of cryptographic primitives: <A HREF="2.06/default.ocvl">Full library</A> <A HREF="2.06/default-excerpt.ocvl">The excerpt used for OEKE</A>
+<P>
+<A HREF="2.06/OEKE.out">The CryptoVerif output</A>, obtained by the command
+<pre>./cryptoverif OEKE.ocv</pre>
+(assuming the CryptoVerif model has been saved under the name <tt>OEKE.ocv</tt> in the CryptoVerif directory).
+
+<H3>Signed Diffie-Hellman protocol</H3>
+
+<A HREF="2.06/signedDH.pcv">The CryptoVerif model of the signed Diffie-Hellman protocol</A>. 
+<P>
+<A HREF="2.06/signedDH.out">The CryptoVerif output</A>, obtained by the command
+<pre>./cryptoverif signedDH.ocv</pre>
+(assuming the CryptoVerif model has been saved under the name <tt>signedDH.ocv</tt> in the CryptoVerif directory).
+
 </body>
 </html>
 
