--- a/website/copy/FDH/index.html
+++ b/website/copy/FDH/index.html
@@ -9,7 +9,7 @@
 <H1>Automated Security Proofs with Sequences of Games</H1>
 
 
-Bruno Blanchet and David Pointcheval. <A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/publications/BlanchetPointchevalCrypto06.html">Automated Security Proofs with Sequences of Games.</A> In Cynthia Dwork, editor, CRYPTO'06, Lecture Notes on Computer Science, Santa Barbara, CA, August 2006. Springer Verlag. 
+Bruno Blanchet and David Pointcheval. <A HREF="https://bblanche.gitlabpages.inria.fr/publications/BlanchetPointchevalCrypto06.html">Automated Security Proofs with Sequences of Games.</A> In Cynthia Dwork, editor, CRYPTO'06, Lecture Notes on Computer Science, Santa Barbara, CA, August 2006. Springer Verlag. 
 <P>
 This page presents the CryptoVerif input and output for the FDH 
 signature example. (These files correspond to an older version of
@@ -27,7 +27,7 @@ The automatic verifier CryptoVerif is also available
 <A HREF="http://cryptoverif.inria.fr">here</A>.
 
 <HR>
-<A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/">Bruno Blanchet</A>
+<A HREF="https://bblanche.gitlabpages.inria.fr/">Bruno Blanchet</A>
 and <A HREF="http://www.di.ens.fr/~pointche">David Pointcheval</A>
 
 
