--- a/website/copy/WireGuard/index.html
+++ b/website/copy/WireGuard/index.html
@@ -11,7 +11,7 @@
   This page presents the CryptoVerif scripts for our analysis of WireGuard:
   <P>
     Benjamin Lipp, Bruno Blanchet, and Karthikeyan Bhargavan. 
-<A HREF="http://prosecco.inria.fr/personal/bblanche/publications/LippBlanchetBhargavanEuroSP19.html">A Mechanised Cryptographic Proof of the WireGuard Virtual Private Network Protocol</A>. In: 4th IEEE European Symposium on Security and Privacy (EuroS&amp;P'19), Stockholm, Sweden, June 2019.
+<A HREF="https://bblanche.gitlabpages.inria.fr/publications/LippBlanchetBhargavanEuroSP19.html">A Mechanised Cryptographic Proof of the WireGuard Virtual Private Network Protocol</A>. In: 4th IEEE European Symposium on Security and Privacy (EuroS&amp;P'19), Stockholm, Sweden, June 2019.
   <P>
 A <A HREF="https://hal.inria.fr/hal-02100345">longer version</A> of our paper contains more details on:
 <UL>
@@ -143,6 +143,6 @@ RESULT Proved indistinguishability between game 27 and game 1 up to probability 
 All queries proved.
 </code>
 <HR>
-Benjamin Lipp and <A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/">Bruno Blanchet</A>,
+<A HREF="https://www.benjaminlipp.de/">Benjamin Lipp</A> and <A HREF="https://bblanche.gitlabpages.inria.fr/">Bruno Blanchet</A>,
 </body>
 </html>
