--- a/website/copy/cryptoverif-users.html
+++ b/website/copy/cryptoverif-users.html
@@ -25,7 +25,7 @@ In <A HREF="http://www-verimag.imag.fr/~lakhnech/FCC/">Workshop on Formal and Co
 <LI>
 Karthikeyan Bhargavan, Ricardo Corin, Cédric Fournet, and Eugen Zalinescu.
 Cryptographically Verified Implementations for TLS.
-In Proceedings of the 15th ACM Conference on Computer and Communications Security (CCS'08), pages 459-468, October 2008. Available at <A HREF="http://prosecco.gforge.inria.fr/personal/karthik/pubs/cryptographically-verified-implementations-for-tls-ccs08.pdf">http://prosecco.gforge.inria.fr/personal/karthik/pubs/cryptographically-verified-implementations-for-tls-ccs08.pdf</A>.
+In Proceedings of the 15th ACM Conference on Computer and Communications Security (CCS'08), pages 459-468, October 2008. Available at <A HREF="https://bhargavan.info/pubs/cryptographically-verified-implementations-for-tls-ccs08.pdf">https://bhargavan.info/pubs/cryptographically-verified-implementations-for-tls-ccs08.pdf</A>.
 
 <LI>
 Bo Meng. Automatic Verification of Deniable Authentication Protocol in a Probabilistic Polynomial Calculus with Cryptoverif. In Information Technology Journal, 10(4):717-735, 2011. Available at <A HREF="http://scialert.net/abstract/?doi=itj.2011.717.735">http://scialert.net/abstract/?doi=itj.2011.717.735</A>.
@@ -75,10 +75,10 @@ Available at <A HREF="https://www.microsoft.com/en-us/research/publication/compu
 If you have written a research paper using CryptoVerif, and want it to
 be added to this page, or if you want the reference to your paper to be
 removed or corrected, please contact <A
-HREF="http://prosecco.gforge.inria.fr/personal/bblanche/">Bruno Blanchet</A>.
+HREF="https://bblanche.gitlabpages.inria.fr/">Bruno Blanchet</A>.
 
 <HR>
-<A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/">Bruno Blanchet</A>
+<A HREF="https://bblanche.gitlabpages.inria.fr/">Bruno Blanchet</A>
 
 </body>
 </html>
