--- a/website/copy/kerberos/CeCILL.html
+++ b/website/copy/kerberos/CeCILL.html
@@ -1014,7 +1014,7 @@ thereof to its provisions.</p>
 
 
 <HR>
-<A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/">Bruno Blanchet</A>
+<A HREF="https://bblanche.gitlabpages.inria.fr/">Bruno Blanchet</A>
 
 </body>
 </html>
