--- a/website/copy/kerberos/index.html
+++ b/website/copy/kerberos/index.html
@@ -9,7 +9,7 @@
 <H1>Computationally Sound Mechanized Proofs for Basic and Public-key Kerberos</H1>
 
 
-Bruno Blanchet, Aaron D. Jaggard, Andre Scedrov, and Joe-Kai Tsay. <A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/publications/BlanchetJaggardScedrovTsayAsiaCCS08.html">Computationally Sound Mechanized Proofs for Basic and Public-key Kerberos</A>. In ACM Symposium on Information, Computer and Communications Security (ASIACCS'08), pages 87-99, Tokyo, Japan, March 2008. ACM. 
+Bruno Blanchet, Aaron D. Jaggard, Andre Scedrov, and Joe-Kai Tsay. <A HREF="https://bblanche.gitlabpages.inria.fr/publications/BlanchetJaggardScedrovTsayAsiaCCS08.html">Computationally Sound Mechanized Proofs for Basic and Public-key Kerberos</A>. In ACM Symposium on Information, Computer and Communications Security (ASIACCS'08), pages 87-99, Tokyo, Japan, March 2008. ACM. 
 <P>
 
 The CryptoVerif scripts for our study of Kerberos are distributed below
@@ -43,7 +43,7 @@ All scripts as an <A HREF="Kerberos.tar.gz">archive</A>.
 
 As a result of the following paper:
 <P>
-Bruno Blanchet, Aaron D. Jaggard, Jesse Rao, Andre Scedrov, and Joe-Kai Tsay. <A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/publications/BlanchetJaggardRaoScedrovTsayFCC09.html">Refining Computationally Sound Mechanized Proofs for Kerberos</A>. In Workshop on Formal and Computational Cryptography (FCC 2009), Port Jefferson, NY, July 2009. 
+Bruno Blanchet, Aaron D. Jaggard, Jesse Rao, Andre Scedrov, and Joe-Kai Tsay. <A HREF="https://bblanche.gitlabpages.inria.fr/publications/BlanchetJaggardRaoScedrovTsayFCC09.html">Refining Computationally Sound Mechanized Proofs for Kerberos</A>. In Workshop on Formal and Computational Cryptography (FCC 2009), Port Jefferson, NY, July 2009. 
 <P>
 we improved our scripts for public-key Kerberos. The improved versions are below:
 <UL>
@@ -78,7 +78,7 @@ Up-to-date scripts for Kerberos are included in the
 in directory <tt>examples/kerberos</tt>.
 
 <HR>
-<A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/">Bruno Blanchet</A>,
+<A HREF="https://bblanche.gitlabpages.inria.fr/">Bruno Blanchet</A>,
 <A HREF="http://dimacs.rutgers.edu/~adj/">Aaron D. Jaggard</A>,
 <A HREF="http://www.cis.upenn.edu/~scedrov/">Andre Scedrov</A>,
 and Joe-Kai Tsay
