--- a/website/copy/tutorial/index.html
+++ b/website/copy/tutorial/index.html
@@ -30,7 +30,7 @@ in manual proofs.
 </OL>
 
 <HR>
-<A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/">Bruno Blanchet</A>
+<A HREF="https://bblanche.gitlabpages.inria.fr/">Bruno Blanchet</A>
 <A HREF="https://www.benjaminlipp.de/">Benjamin Lipp</A>
 </body>
 </html>
