--- a/website/footer.html
+++ b/website/footer.html
@@ -1,11 +1,11 @@
 <H3>Support of the CryptoVerif project</H3>
 
 The development of CryptoVerif was partly supported by the ANR project
-<A HREF="http://prosecco.inria.fr/personal/bblanche/formacrypt/index.html">ARA SSIA Formacrypt</A> and the
+<A HREF="https://bblanche.gitlabpages.inria.fr/formacrypt/index.html">ARA SSIA Formacrypt</A> and the
 ANR VERSO 2010 <A HREF="https://crypto.di.ens.fr/projects:prose:main">ProSe</A>.
 
 <HR>
-<A HREF="http://prosecco.inria.fr/personal/bblanche/">Bruno Blanchet</A>
+<A HREF="https://bblanche.gitlabpages.inria.fr/">Bruno Blanchet</A>
 
 </body>
 </html>
