--- a/website/publis.html
+++ b/website/publis.html
@@ -8,7 +8,7 @@
 <dd>
 Joël Alwen, Bruno Blanchet, Eduard Hauck, Eike Kiltz, Benjamin Lipp, and Doreen
   Riepel.
-  <A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/publications/AlwenetalEurocrypt21.html">Analysing the HPKE Standard</A>.
+  <A HREF="http://bblanche.gitlabpages.inria.fr/publications/AlwenetalEurocrypt21.html">Analysing the HPKE Standard</A>.
   In Anne Canteaut and Francois-Xavier Standaert, editors, <i>
   Eurocrypt 2021</i>, volume 12696 of <i>Lecture Notes in Computer Science</i>,
   pages 87-116, Zagreb, Croatia, October 2021. Springer.<br />
@@ -39,7 +39,7 @@ Joël Alwen, Bruno Blanchet, Eduard Hauck, Eike Kiltz, Benjamin Lipp, and Doreen
 </dt>
 <dd>
 Benjamin Lipp, Bruno Blanchet, and Karthikeyan Bhargavan.
-  <A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/publications/LippBlanchetBhargavanEuroSP19.html">A Mechanised Cryptographic Proof of the WireGuard
+  <A HREF="http://bblanche.gitlabpages.inria.fr/publications/LippBlanchetBhargavanEuroSP19.html">A Mechanised Cryptographic Proof of the WireGuard
   Virtual Private Network Protocol</A>.
   In <i>IEEE European Symposium on Security and Privacy
   (EuroS&amp;P'19)</i>, pages 231-246, Stockholm, Sweden, June 2019. IEEE Computer
@@ -71,7 +71,7 @@ Benjamin Lipp, Bruno Blanchet, and Karthikeyan Bhargavan.
 </dt>
 <dd>
 Bruno Blanchet.
-  <A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/publications/BlanchetCSF18.html">Composition Theorems for CryptoVerif and Application to
+  <A HREF="http://bblanche.gitlabpages.inria.fr/publications/BlanchetCSF18.html">Composition Theorems for CryptoVerif and Application to
   TLS 1.3</A>.
   In <i>31st IEEE Computer Security Foundations Symposium (CSF'18)</i>,
   pages 16-30, Oxford, UK, July 2018. IEEE Computer Society.<br />
@@ -102,7 +102,7 @@ Bruno Blanchet.
 </dt>
 <dd>
 Bruno Blanchet.
-  <A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/publications/BlanchetCSF17.html">Symbolic and Computational Mechanized Verification of the
+  <A HREF="http://bblanche.gitlabpages.inria.fr/publications/BlanchetCSF17.html">Symbolic and Computational Mechanized Verification of the
   ARINC823 Avionic Protocols</A>.
   In <i>30th IEEE Computer Security Foundations Symposium (CSF'17)</i>,
   pages 68-82, Santa Barbara, CA, USA, August 2017. IEEE.<br />
@@ -149,7 +149,7 @@ Karthikeyan Bhargavan, Bruno Blanchet, and Nadim Kobeissi.
 </dt>
 <dd>
 Karthikeyan Bhargavan, Bruno Blanchet, and Nadim Kobeissi.
-  <A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/publications/BhargavanBlanchetKobeissiSP2017.html">Verified Models and Reference Implementations for the TLS
+  <A HREF="http://bblanche.gitlabpages.inria.fr/publications/BhargavanBlanchetKobeissiSP2017.html">Verified Models and Reference Implementations for the TLS
   1.3 Standard Candidate</A>.
   In <i>IEEE Symposium on Security and Privacy (S&amp;P'17)</i>, pages
   483-503, San Jose, CA, May 2017. IEEE.
@@ -165,7 +165,7 @@ Karthikeyan Bhargavan, Bruno Blanchet, and Nadim Kobeissi.
 </dt>
 <dd>
 Nadim Kobeissi, Karthikeyan Bhargavan, and Bruno Blanchet.
-  <A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/publications/KobeissiBhargavanBlanchetEuroSP17.html">Automated Verification for Secure Messaging Protocols and
+  <A HREF="http://bblanche.gitlabpages.inria.fr/publications/KobeissiBhargavanBlanchetEuroSP17.html">Automated Verification for Secure Messaging Protocols and
   their Implementations: A Symbolic and Computational Approach</A>.
   In <i>2nd IEEE European Symposium on Security and Privacy
   (EuroS&amp;P'17)</i>, pages 435-450, Paris, France, April 2017. IEEE.<br />
@@ -180,7 +180,7 @@ Nadim Kobeissi, Karthikeyan Bhargavan, and Bruno Blanchet.
 </dt>
 <dd>
 David Cadé and Bruno Blanchet.
-  <A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/publications/CadeBlanchetJCS14.html">Proved Generation of Implementations from Computationally
+  <A HREF="http://bblanche.gitlabpages.inria.fr/publications/CadeBlanchetJCS14.html">Proved Generation of Implementations from Computationally
   Secure Protocol Specifications</A>.
   <i>Journal of Computer Security</i>, 23(3):331-402, 2015.<br />
 
@@ -194,7 +194,7 @@ David Cadé and Bruno Blanchet.
 </dt>
 <dd>
 David Cadé and Bruno Blanchet.
-  <A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/publications/CadeBlanchetJoWUA13.html">From Computationally-Proved Protocol Specifications to
+  <A HREF="http://bblanche.gitlabpages.inria.fr/publications/CadeBlanchetJoWUA13.html">From Computationally-Proved Protocol Specifications to
   Implementations and Application to SSH</A>.
   <i>Journal of Wireless Mobile Networks, Ubiquitous Computing, and
   Dependable Applications (JoWUA)</i>, 4(1):4-31, March 2013.
@@ -210,7 +210,7 @@ David Cadé and Bruno Blanchet.
 </dt>
 <dd>
 David Cadé and Bruno Blanchet.
-  <A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/publications/CadeBlanchetPOST13.html">Proved Generation of Implementations from
+  <A HREF="http://bblanche.gitlabpages.inria.fr/publications/CadeBlanchetPOST13.html">Proved Generation of Implementations from
   Computationally-Secure Protocol Specifications</A>.
   In David Basin and John Mitchell, editors, <i>2nd Conference on
   Principles of Security and Trust (POST 2013)</i>, volume 7796 of <i>Lecture
@@ -226,7 +226,7 @@ David Cadé and Bruno Blanchet.
 </dt>
 <dd>
 David Cadé and Bruno Blanchet.
-  <A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/publications/CadeBlanchetARES12.html">From Computationally-proved Protocol Specifications to
+  <A HREF="http://bblanche.gitlabpages.inria.fr/publications/CadeBlanchetARES12.html">From Computationally-proved Protocol Specifications to
   Implementations</A>.
   In <i>7th International Conference on Availability, Reliability and
   Security (AReS 2012)</i>, pages 65-74, Prague, Czech Republic, August 2012.
@@ -242,7 +242,7 @@ David Cadé and Bruno Blanchet.
 </dt>
 <dd>
 Bruno Blanchet.
-  <A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/publications/BlanchetCSF12.html">Automatically Verified Mechanized Proof of One-Encryption
+  <A HREF="http://bblanche.gitlabpages.inria.fr/publications/BlanchetCSF12.html">Automatically Verified Mechanized Proof of One-Encryption
   Key Exchange</A>.
   In <i>25th IEEE Computer Security Foundations Symposium (CSF'12)</i>,
   pages 325-339, Cambridge, MA, USA, June 2012. IEEE.<br />
@@ -257,7 +257,7 @@ Bruno Blanchet.
 </dt>
 <dd>
 Bruno Blanchet.
-  <A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/publications/BlanchetMOD11.html">Mechanizing Game-Based Proofs of Security Protocols</A>.
+  <A HREF="http://bblanche.gitlabpages.inria.fr/publications/BlanchetMOD11.html">Mechanizing Game-Based Proofs of Security Protocols</A>.
   In Tobias Nipkow, Olga Grumberg, and Benedikt Hauptmann, editors,
   <i>Software Safety and Security - Tools for Analysis and Verification</i>,
   volume 33 of <i>NATO Science for Peace and Security Series - D:
@@ -290,7 +290,7 @@ Bruno Blanchet.
 </dt>
 <dd>
 Bruno Blanchet.
-  <A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/publications/BlanchetFCC11.html">A second look at Shoup's lemma</A>.
+  <A HREF="http://bblanche.gitlabpages.inria.fr/publications/BlanchetFCC11.html">A second look at Shoup's lemma</A>.
   In <i>Workshop on Formal and Computational Cryptography (FCC
   2011)</i>, Paris, France, June 2011.<br />
 
@@ -304,7 +304,7 @@ Bruno Blanchet.
 </dt>
 <dd>
 Bruno Blanchet and David Pointcheval.
-  <A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/publications/BlanchetPointchevalFCC10.html">The computational and decisional Diffie-Hellman
+  <A HREF="http://bblanche.gitlabpages.inria.fr/publications/BlanchetPointchevalFCC10.html">The computational and decisional Diffie-Hellman
   assumptions in CryptoVerif</A>.
   In <i>Workshop on Formal and Computational Cryptography (FCC
   2010)</i>, Edimburgh, United Kingdom, July 2010.<br />
@@ -319,7 +319,7 @@ Bruno Blanchet and David Pointcheval.
 </dt>
 <dd>
 Bruno Blanchet, Aaron D. Jaggard, Jesse Rao, Andre Scedrov, and Joe-Kai Tsay.
-  <A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/publications/BlanchetJaggardRaoScedrovTsayFCC09.html">Refining Computationally Sound Mechanized Proofs for
+  <A HREF="http://bblanche.gitlabpages.inria.fr/publications/BlanchetJaggardRaoScedrovTsayFCC09.html">Refining Computationally Sound Mechanized Proofs for
   Kerberos</A>.
   In <i>Workshop on Formal and Computational Cryptography (FCC
   2009)</i>, Port Jefferson, NY, July 2009.<br />
@@ -334,7 +334,7 @@ Bruno Blanchet, Aaron D. Jaggard, Jesse Rao, Andre Scedrov, and Joe-Kai Tsay.
 </dt>
 <dd>
 Martín Abadi (invited speaker), Bruno Blanchet, and Hubert Comon-Lundh.
-  <A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/publications/AbadiBlanchetComonCAV09.html">Models and Proofs of Protocol Security: A Progress Report</A>.
+  <A HREF="http://bblanche.gitlabpages.inria.fr/publications/AbadiBlanchetComonCAV09.html">Models and Proofs of Protocol Security: A Progress Report</A>.
   In Ahmed Bouajjani and Oded Maler, editors, <i>21st International
   Conference on Computer Aided Verification (CAV'09)</i>, volume 5643 of <i>
   Lecture Notes in Computer Science</i>, pages 35-49, Grenoble, France, June
@@ -350,7 +350,7 @@ Martín Abadi (invited speaker), Bruno Blanchet, and Hubert Comon-Lundh.
 </dt>
 <dd>
 Bruno Blanchet.
-  <i><A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/publications/BlanchetHDR.html">Vérification automatique de protocoles
+  <i><A HREF="http://bblanche.gitlabpages.inria.fr/publications/BlanchetHDR.html">Vérification automatique de protocoles
   cryptographiques : modèle formel et modèle calculatoire. Automatic
   verification of security protocols: formal model and computational model</A></i>.
   Mémoire d'habilitation à diriger des recherches, Université
@@ -368,7 +368,7 @@ Bruno Blanchet.
 </dt>
 <dd>
 Bruno Blanchet, Aaron D. Jaggard, Andre Scedrov, and Joe-Kai Tsay.
-  <A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/publications/BlanchetJaggardScedrovTsayAsiaCCS08.html">Computationally Sound Mechanized Proofs for Basic and
+  <A HREF="http://bblanche.gitlabpages.inria.fr/publications/BlanchetJaggardScedrovTsayAsiaCCS08.html">Computationally Sound Mechanized Proofs for Basic and
   Public-key Kerberos</A>.
   In <i>ACM Symposium on Information, Computer and Communications
   Security (ASIACCS'08)</i>, pages 87-99, Tokyo, Japan, March 2008. ACM.<br />
@@ -383,7 +383,7 @@ Bruno Blanchet, Aaron D. Jaggard, Andre Scedrov, and Joe-Kai Tsay.
 </dt>
 <dd>
 Bruno Blanchet.
-  <A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/publications/BlanchetTDSC07.html">A Computationally Sound Mechanized Prover for Security
+  <A HREF="http://bblanche.gitlabpages.inria.fr/publications/BlanchetTDSC07.html">A Computationally Sound Mechanized Prover for Security
   Protocols</A>.
   <i>IEEE Transactions on Dependable and Secure Computing</i>,
   5(4):193-207, October-December 2008.
@@ -401,7 +401,7 @@ Bruno Blanchet.
 </dt>
 <dd>
 Bruno Blanchet.
-  <A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/publications/BlanchetDagstuhl07.html">CryptoVerif: A Computationally Sound Mechanized Prover
+  <A HREF="http://bblanche.gitlabpages.inria.fr/publications/BlanchetDagstuhl07.html">CryptoVerif: A Computationally Sound Mechanized Prover
   for Cryptographic Protocols</A>.
   In <i>Dagstuhl seminar <tt>Formal Protocol Verification Applied</tt></i>,
   October 2007.<br />
@@ -416,7 +416,7 @@ Bruno Blanchet.
 </dt>
 <dd>
 Bruno Blanchet, Aaron D. Jaggard, Andre Scedrov, and Joe-Kai Tsay.
-  <A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/publications/BlanchetJaggardScedrovTsayDagstuhl07.html">Computationally Sound Mechanized Proofs for Basic and
+  <A HREF="http://bblanche.gitlabpages.inria.fr/publications/BlanchetJaggardScedrovTsayDagstuhl07.html">Computationally Sound Mechanized Proofs for Basic and
   Public-key Kerberos</A>.
   In <i>Dagstuhl seminar <tt>Formal Protocol Verification Applied</tt></i>,
   October 2007.<br />
@@ -431,7 +431,7 @@ Bruno Blanchet, Aaron D. Jaggard, Andre Scedrov, and Joe-Kai Tsay.
 </dt>
 <dd>
 Bruno Blanchet.
-  <A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/publications/BlanchetCSF07.html">Computationally Sound Mechanized Proofs of Correspondence
+  <A HREF="http://bblanche.gitlabpages.inria.fr/publications/BlanchetCSF07.html">Computationally Sound Mechanized Proofs of Correspondence
   Assertions</A>.
   In <i>20th IEEE Computer Security Foundations Symposium (CSF'07)</i>,
   pages 97-111, Venice, Italy, July 2007. IEEE.<br />
@@ -461,7 +461,7 @@ Bruno Blanchet.
 </dt>
 <dd>
 Bruno Blanchet and David Pointcheval.
-  <A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/publications/BlanchetPointchevalCrypto06.html">Automated Security Proofs with Sequences of Games</A>.
+  <A HREF="http://bblanche.gitlabpages.inria.fr/publications/BlanchetPointchevalCrypto06.html">Automated Security Proofs with Sequences of Games</A>.
   In Cynthia Dwork, editor, <i>CRYPTO'06</i>, volume 4117 of <i>
   Lecture Notes in Computer Science</i>, pages 537-554, Santa Barbara, CA, August
   2006. Springer.<br />
@@ -476,7 +476,7 @@ Bruno Blanchet and David Pointcheval.
 </dt>
 <dd>
 Bruno Blanchet.
-  <A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/publications/BlanchetOakland06.html">A Computationally Sound Mechanized Prover for Security
+  <A HREF="http://bblanche.gitlabpages.inria.fr/publications/BlanchetOakland06.html">A Computationally Sound Mechanized Prover for Security
   Protocols</A>.
   In <i>IEEE Symposium on Security and Privacy</i>, pages 140-154,
   Oakland, California, May 2006.<br />
@@ -521,7 +521,7 @@ Bruno Blanchet.
 </dt>
 <dd>
 Bruno Blanchet.
-  <A HREF="http://prosecco.gforge.inria.fr/personal/bblanche/publications/BlanchetLink05.html">A Computationally Sound Automatic Prover for Cryptographic
+  <A HREF="http://bblanche.gitlabpages.inria.fr/publications/BlanchetLink05.html">A Computationally Sound Automatic Prover for Cryptographic
   Protocols</A>.
   In <i>Workshop on the link between formal and computational
   models</i>, Paris, France, June 2005.<br />
